[gd_scene load_steps=16 format=3 uid="uid://c726l76pt4dut"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_p7l0g"]
[ext_resource type="Script" path="res://scripts/MyHurtBox.gd" id="3_y8gol"]
[ext_resource type="Texture2D" uid="uid://c0ilst81j0by8" path="res://assets/enemies/mouse/sideways/mouseDown_upscale_00026_manualBGRemoval.png" id="14_0hqln"]
[ext_resource type="Texture2D" uid="uid://doyvnmivefo2y" path="res://assets/enemies/mouse/sideways/mouseDown_upscale_00027_manualBGRemoval.png" id="15_iqt2s"]
[ext_resource type="Texture2D" uid="uid://cnqqyri3ion1g" path="res://assets/enemies/mouse/sideways/mouseDown_upscale_00028_manualBGRemoval.png" id="16_4a6fg"]
[ext_resource type="Theme" uid="uid://djhl7imungmc6" path="res://themes/healthbar.tres" id="16_xfiab"]
[ext_resource type="AudioStream" uid="uid://dly6wkydgdeyt" path="res://assets/sounds/wallSwordShort.wav" id="17_fepov"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ad58v"]
size = Vector2(129, 131)

[sub_resource type="CircleShape2D" id="CircleShape2D_7vviy"]
radius = 420.019

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01vhw"]
size = Vector2(20.25, 20.25)

[sub_resource type="SpriteFrames" id="SpriteFrames_8hyg7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_0hqln")
}, {
"duration": 1.0,
"texture": ExtResource("15_iqt2s")
}, {
"duration": 1.0,
"texture": ExtResource("16_4a6fg")
}, {
"duration": 1.0,
"texture": ExtResource("15_iqt2s")
}],
"loop": true,
"name": &"horizontal",
"speed": 9.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oeaah"]
radius = 1040.77

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gpibk"]
polygon = PackedVector2Array(-304, 48, -208, -64, -80, -48, 16, -32, 160, -96, 208, -96, 240, -128, 272, -96, 256, -48, 320, 32, 352, 96, 240, 112, 208, 112, 192, 144, 80, 176, -16, 176, -144, 160, -192, 192, -272, 192, -256, 208, -208, 208, -272, 224, -320, 176, -272, 128)

[sub_resource type="SystemFont" id="SystemFont_26a5j"]

[sub_resource type="LabelSettings" id="LabelSettings_jucig"]
font = SubResource("SystemFont_26a5j")
font_size = 80
font_color = Color(0.615686, 0, 0.0666667, 1)

[node name="enemy" type="CharacterBody2D" groups=["enemies"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.25, 0.25)
script = ExtResource("1_p7l0g")

[node name="EnemyBody" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_ad58v")
debug_color = Color(0.996078, 0, 0.192157, 0.419608)

[node name="SpawnTimer" type="Timer" parent="."]

[node name="FOV" type="Area2D" parent="."]
visible = false
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FOV"]
light_mask = 2
visibility_layer = 2
z_index = 1
shape = SubResource("CircleShape2D_7vviy")
debug_color = Color(0.976471, 0, 0.407843, 0.760784)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
z_index = 1
scale = Vector2(12, 12)
shape = SubResource("RectangleShape2D_01vhw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_8hyg7")
animation = &"horizontal"

[node name="MyHurtBox" type="Area2D" parent="AnimatedSprite2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("3_y8gol")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/MyHurtBox"]
position = Vector2(-40, 160)
rotation = 1.56207
shape = SubResource("CircleShape2D_oeaah")

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
occluder = SubResource("OccluderPolygon2D_gpibk")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(70, 10)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -27.0
offset_right = 35.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("16_xfiab")
rounded = true
show_percentage = false

[node name="AudioStreamTakeDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_fepov")

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="DamageTakenLabel" type="Label" parent="."]
z_index = 1
offset_left = 8.0
offset_top = -148.0
offset_right = 122.0
offset_bottom = -11.0
label_settings = SubResource("LabelSettings_jucig")

[node name="DamageTakenTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="FOV" to="." method="_on_fov_body_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_fov_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="finished" from="AudioStreamTakeDamage" to="." method="_on_audio_stream_take_damage_finished"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="DamageTakenTimer" to="." method="_on_damage_taken_timer_timeout"]
